--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,24 +3,91 @@ body{
     height: 100%;
     margin: 0px; 
     padding: 0px;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(110, 0, 213, 0.65) 0%, rgba(77, 77, 204, 0.65) 47%, rgba(0,212,255,0.65) 100%);
-    overflow: auto;
-
+    /* background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(110, 0, 213, 0.65) 0%, rgba(77, 77, 204, 0.65) 47%, rgba(0,212,255,0.65) 100%); */
+    /* overflow: auto; */
+    /* display: flex; */
+    /* justify-content: center; */
 }
 .background {
-    background-image: url("../pictures/language_background.png");
-    background-size: cover;
+    background-color: rgba(128, 89, 253, 1);
+    background-image: linear-gradient(163deg, rgba(128, 89, 253, 1) 0%, rgba(128, 89, 253, 1) 25%, rgba(255, 195, 31, 1) 86%);
     background-position: center;
-    width: 100%;
-    height: 46vh;
+    border-radius: 20px 20px 0px 0px;
+    /* margin: 0px 1% 0px 1; */
+    width: 97vw;
+    height: 100vh;
     overflow: auto; 
-    position: relative; 
+    /* position: absolute;  */
     min-width: 300px;
     margin: 0px;
     padding: 0px;
 
    }
+
+   .container{
+    width: 90%;
+    height: 100vh;
+    margin-top: 40px;
+    /* background-color: red; */
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.text_main{
+    width: 70%;
+    height: 55vh;;
+    padding: 40px 20px 0px 20px;
+    display: flex;
+    flex-direction: column;
+}
+.text_main :first-child{
+    color: white;
+    margin: 0px;
+    font-size: 4rem;
+    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
+
+}
+
+.text_main :nth-child(2){
+    color: white;
+    font-size: 1.2rem;
+    margin: 40px 0px 0px 0px;
+    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
+
+}
+
+.text_main div img {
+    width: 80vw;
+    margin: 0px;
+    align-items: center;
+    justify-self: start;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .black_bg{
     position: absolute;
@@ -37,7 +104,7 @@ body{
 
 
 }
-.get_start {
+.get_started {
     position: absolute;
     top: 0;
     left: 0;
@@ -52,7 +119,7 @@ body{
 }
 
 
-.get_start div {
+.get_started div {
     font-family: "Orbitron", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     /* width: 100%;  */
     /* height: 100%;        */
@@ -69,7 +136,7 @@ body{
 
 
 }
-.get_start h1{
+.get_started h1{
     font-size: 3.5em;
     line-height: 1.2;
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.90);
@@ -86,14 +153,14 @@ body{
     text-shadow: 0 0 10px rgba(20, 20, 20, 0.75);
 }
 
-.get_start h1, 
-.get_start .small {
+.get_started h1, 
+.get_started .small {
     margin: 0; 
 }
 
 
 
-.get_start div button{
+.get_started div button{
     font-size: 2rem;
     margin-top: 35px;
     margin-bottom: 0px;
@@ -115,17 +182,17 @@ body{
 
 
 
-.get_start div button:hover {
+.get_started div button:hover {
     background-position: 0 50%; 
 }
 
 
-.get_start div button:active {
+.get_started div button:active {
     transform: scale(1.1);
 }
 
 
-.get_start div div {
+.get_started div div {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -135,7 +202,7 @@ body{
 
 }
 
-.get_start div div a{
+.get_started div div a{
     color: white;
 }
 .no-underline {
