--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
             <div class="menu">
               <nav>
                 <div class="menu_objects">
-                  <div class="logo">
-                    <img src="../static/pictures/Zasób 1.svg" alt="Logo" />
-                  </div>
+                    <div class="logo">
+                        <img src="../static/pictures/Zasób 1.svg" alt="Logo" />
+                    </div>
                   <div class="center">
                     <div class="menu-item">
                       <a href="#">Item 1</a>
@@ -30,10 +30,10 @@
                   </div>
                   <div class="start">
                     <button class="inner">
-                      <a>LogIn</a>
+                      <a href="/login">LogIn</a>
                     </button>
-                    <button class="get_start">
-                      <a>GetStarted</a>
+                    <button class="get_start" >
+                      <a href="/login">GetStarted</a>
                     </button>
                     <button class="menu_show" id="menu_slider">
                           <img src="../static/pictures/Zasób 3.svg">
@@ -48,6 +48,16 @@
               </nav>
 
             </div>
+            <div class="slider_div">
+                <div class="linie"></div>
+                <div class="obj"><a href="#">Item 1</a></div>
+                <div class="obj"><a href="#">Item 2</a></div>
+                <div class="obj"><a href="#">Item 3</a></div>
+                <div class="buttons">
+                    <button class="get_start2">Get Start</button>
+                    <button class="log_in2">Log In</button>
+                </div>
+              </div>
             <div class="container">
                 <div class="text_main">
                     <p><b>
@@ -57,25 +67,49 @@
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, consectetur expedita totam aut deserunt inventore. Neque eligendi voluptatum omnis modi laudantium in eos blanditiis 
                     </p>
-                    <div>
+                    <div class="image-container">
                         <img src="../static/pictures/pic.png">
                     </div>
                 </div>
             </div>
 
             </div>
-            <div class="slider_div">
-              <div class="linie"></div>
-              <div class="obj"><a href="#">Item 1</a></div>
-              <div class="obj"><a href="#">Item 2</a></div>
-              <div class="obj"><a href="#">Item 3</a></div>
-              <div class="buttons">
-                  <button class="get_start2">Get Start</button>
-                  <button class="log_in2">Log In</button>
-              </div>
-            </div>
+
           </header>
-    </div> 
+          <div class="slid">
+                <div class="inn_slid">
+                    <h5 class="text_how">How it works</h5>
+                    <h1>It's time to take action</h1>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore earum adipisci nisi quidem dignissimos <br>modi cupiditate dolores! Earum fugit, sit iusto reprehenderit quo provident, laboriosam vel sequi veniam, delectus ipsa.
+                    </h4>
+                </div>
+                <div class="white_divs">
+                    <div class="card">
+                        <h3 class="card-title">Created with the latest technologies</h3>
+                        <p class="card-description">
+                            We ensure our code is not just efficient and robust, but also highly adaptable and
+                            intuitive for developers.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3 class="card-title">Created with the latest technologies</h3>
+                        <p class="card-description">
+                            We ensure our code is not just efficient and robust, but also highly adaptable and
+                            intuitive for developers.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <h3 class="card-title">Created with the latest technologies</h3>
+                        <p class="card-description">
+                            We ensure our code is not just efficient and robust, but also highly adaptable and
+                            intuitive for developers.
+                        </p>
+                    </div>
+                </div>
+
+          </div>
+          
+     
 
     <!-- <div class="black_bg">
         <div class="get_started">
