--- a/static/css/help.css
+++ b/static/css/help.css
@@ -6,6 +6,7 @@ body{
     background-color: white;
     width: 100%;
     height: 100%;
+    margin: 1%;
     padding: 0px;
     display: flex;
     flex-direction: column;
@@ -15,7 +16,7 @@ body{
     display: none !important;
     width: 90%;
     height: 200px;
-    margin: 0% 5% 0px 5%;    
+    margin: 0px 5% 0px 5%;    
     background-color: var(--color-black);
     border-radius: 0px 0px 10px 10px;
     /* padding: 0px 5% 0px 5%; */
@@ -64,7 +65,6 @@ body{
     background-color: rgba(72, 72, 72, 0.4); 
 }
 .get_start2{
-
     margin-left: 5% ;
     margin-right: 5%;
 }
@@ -175,10 +175,6 @@ body{
     border: 0px;
 }
 
-header{
-    margin-top: 10px;
-}
-
 nav{
     display: flex;
     flex-direction: row;
@@ -195,39 +191,6 @@ nav{
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: relative;
-}
-
-
-.container{
-    width: 90%;
-    height: 100vh;
-    margin-top: 40px;
-    /* background-color: red; */
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.text_main{
-    width: 70%;
-    height: 80vh;;
-    padding: 40px 20px 0px 20px;
-}
-.text_main :first-child{
-    color: white;
-    margin: 0px;
-    font-size: 4rem;
-    
-    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
-
-}
-
-.text_main :nth-child(2){
-    color: white;
-    margin: 0px;
-    font-size: 1.2rem;
-    
-    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
-
 }
 
 .menu_objects .logo {
@@ -298,16 +261,8 @@ nav{
     border: 0px;
 
 }
-
-.inner a{
-    text-decoration: none;
-    color: white;
-}
-
 .get_start a{
     margin: 0px 5px 0px 5px;
-    text-decoration: none;
-    color: black;
 }
 
 .start .inner:hover{
@@ -331,7 +286,6 @@ nav{
 }
 
 .start .get_start:hover{
-    color: white
-;
+    color: white;
     background-color: #8957ff;
 }
