--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,27 +1,24 @@
 body{
+    background-color: white;
     width: 100%;
     height: 100%;
-    margin: 0px; 
     padding: 0px;
-    /* background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(110, 0, 213, 0.65) 0%, rgba(77, 77, 204, 0.65) 47%, rgba(0,212,255,0.65) 100%); */
-    /* overflow: auto; */
-    /* display: flex; */
-    /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
 }
 .background {
     background-color: rgba(128, 89, 253, 1);
     background-image: linear-gradient(163deg, rgba(128, 89, 253, 1) 0%, rgba(128, 89, 253, 1) 25%, rgba(255, 195, 31, 1) 86%);
-    background-position: center;
-    border-radius: 20px 20px 0px 0px;
-    /* margin: 0px 1% 0px 1; */
-    width: 97vw;
-    height: 100vh;
-    overflow: auto; 
+    /* margin: 10%; */
+    width: 100vw;
+    height: 120vh;
+    /* overflow: auto;  */
     /* position: absolute;  */
     min-width: 300px;
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 
    }
 
@@ -38,7 +35,7 @@ body{
 
 .text_main{
     width: 70%;
-    height: 55vh;;
+    height: 100%;;
     padding: 40px 20px 0px 20px;
     display: flex;
     flex-direction: column;
@@ -58,12 +55,17 @@ body{
     font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
 
 }
-
+.text_main div{
+    width: 140%;
+    height: 100%;
+    height: max-content;
+    display: flex;
+}
 .text_main div img {
-    width: 80vw;
+    width: 100%;
     margin: 0px;
-    align-items: center;
-    justify-self: start;
+    align-items: end;
+    justify-self:end;
 }
 
 
@@ -71,279 +73,111 @@ body{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.black_bg{
-    position: absolute;
-    top: 0;
-    left: 0;
+.slid{
     width: 100%;
-    height: 46vh;
-    background-color: rgba(0, 0, 0, 0.4);
+    height: 800px;
+    background-color: #0f172a;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center; 
-
-
-}
-.get_started {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    /* height: 100%; */
-    margin-top: 8vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center; 
-}
-
-
-.get_started div {
-    font-family: "Orbitron", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    /* width: 100%;  */
-    /* height: 100%;        */
-    letter-spacing: 1px;
-    color: white;
-    /* position: absolute;  */
-    /* top: 0; */
-    /* left: 0;   */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* overflow: hidden; */
-
-
-}
-.get_started h1{
-    font-size: 3.5em;
-    line-height: 1.2;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.90);
-    letter-spacing: 4px;
-
-
-}
-
-.small{
-    font-size: 2rem;
-    color: white;
-    line-height: 1.2em;
-    letter-spacing: 4px;
-    text-shadow: 0 0 10px rgba(20, 20, 20, 0.75);
-}
-
-.get_started h1, 
-.get_started .small {
-    margin: 0; 
 }
 
 
 
-.get_started div button{
-    font-size: 2rem;
-    margin-top: 35px;
-    margin-bottom: 0px;
-    width: 180px;
-    height: 8vh;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(90,90,163,1) 47%, rgba(0,212,255,1) 100%);
-    border: 0px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(20, 20, 20, 0.75);
-    cursor: pointer;
-    background-size: 120% auto; 
-    background-position: 100% 50%; 
-    transition: background-position 0.3s; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-
-
-.get_started div button:hover {
-    background-position: 0 50%; 
-}
-
-
-.get_started div button:active {
-    transform: scale(1.1);
-}
-
-
-.get_started div div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 0px;
-
-}
-
-.get_started div div a{
-    color: white;
-}
-.no-underline {
-    text-decoration: none;
-}
-
-.main_contener{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    margin-top: 5%; 
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1% 0% 1% 0%;
-}
-
-.first_cont{
-    width: 100%;
-    height: 40%;
-    /* margin: 0% 10% 0% 10%   ; */
-    /* background-color: red; */
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    margin-bottom: 2%;
-    
-
-}
-
-
-.text_cont{
+.inn_slid{
     width: 80%;
-    height: 100%;
-    /* background-color: blue; */
+    height: 300px;
+}
+
+
+
+.inn_slid h1{
+    color: white;
+    font-size: 4rem;
+    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
+    margin: 0px;
+}
+.inn_slid h4{
+    color: rgb(240, 238, 238);
+    font-size: 1rem;
+    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
+    margin: 0px;
+    
+}
+
+
+
+
+
+.text_how{
+    color: #8957ff;
+    font-size: 1.8rem;
+    font-family: Satoshi,sans-serif;
+    margin-top: 100px;
+    margin-bottom: 0px;
+
+}
+
+
+
+
+
+.divs_objects{
+    width: 80%;
+    height: calc(100%);
+}
+
+
+
+
+
+
+.white_divs{
+    width: 80%;
+    height: 500px;
     display: flex;
     flex-direction: row;
     gap: 5%;
-    /* overflow: hidden;     */
-    
-
-
 }
 
 
 
+.card {
+    background-color: white;
+    color: rgba(30, 41, 59, 0.75);
+    border-radius: 15px;
+    padding: 20px;
+    width: 35%;
+    height: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: Satoshi, sans-serif, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji ;
 
-.text {
-    
-    width: 40%;
-    font-size: 130%;
-    margin-left: 10%;
+    position: relative;
+    overflow: hidden;
+}
 
+.card::before {
+    margin-top: 20px;
+    content: "";
+    font-size: 40px;
+    color: white;
+    background-color:#8957ff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}.card-title {
+    font-size: 1.5rem;
+    margin-top: 30px; 
+}
+
+.card-description {
+    font-size: 1rem;
+    margin: 10px 0 0 0;
 }
 
 
-
-@media (max-width: 1200px){
-    .text_cont {
-        width: 80%;
-        height: 10%;
-        /* background-color: blue; */
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: left;
-        gap: 5%;
-    }
-
-
-    .text{
-        /* color: wheat; */
-        width: 100%;
-        
-        font-size: 100%;
-        /* overflow: hidden; */
-        margin-left: 0%;
-        align-self: self-start;
-    }   
-    #tC_2 {
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-}
-
-.python_img {
-    width: 400px;
-    height: 360px;
-    background-image: url('/static/pictures/python_learn.png');
-    background-size: 100%;
-    background-position: center;
-    border: none;
-}
-
-.python_img2 {
-    width: 70%; /* Możesz dostosować tę wartość według potrzeb */
-    height: 88%; /* Możesz dostosować tę wartość według potrzeb */
-    overflow: hidden; /* Zapobiega wyświetlaniu elementów, które wychodzą poza granice diva */
-    border: none; /* Usunięcie ramki wokół diva */
-    position: relative; 
-}
-
-.python_img2 img {
-    width: 100%;
-    height: 100%; 
-    object-fit: cover;
-}
-
-
-.element {
-    background: linear-gradient(
-      90deg,
-      rgba(251, 131, 131, 0.1) 0%,
-      rgba(254, 81, 150, 0.1) 100%
-    );
-    background-blend-mode: ;
-    transform: translate(0px, 0px) scale(2.9, 2.6);
-    box-shadow:
-      inset 0px 5px 5px 0px rgba(255, 255, 255, 0.1),
-      inset 0px -5px 5px 0px rgba(254, 81, 150, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    width: 10%;
-    height: 10vh;
-    border-radius:15px;
-
-
-}
-
-.main_contener {
-    margin-bottom: 5vh;
-}
-
-
-.login{
-
-}
