--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="background">
-        <header>
+        <header class="header">
             <div class="menu">
               <nav>
                 <div class="menu_objects">
@@ -109,74 +109,21 @@
 
           </div>
           
-     
+   
 
-    <!-- <div class="black_bg">
-        <div class="get_started">
-            <div>
-                <h1>Py Genius</h1>
-                <div class="small">Interactive Learning to Program</div>
-                <button><h5 style="color: white;">Get Started</h5></button>
-                <div>
-                    <h4><a href="/login" class="no-underline">LOGIN</a> | <a href="/login" class="no-underline">SIGN UP</a></h4>
-                </div>
-            </div>
-    
-        </div>
-    </div> -->
+<script>
+    document.getElementById("get_startID").addEventListener("click", function (){
+      window.location.href = "/logout";
+    })
 
-    <!-- <div class="main_contener">
-        <div class="first_cont">
-            <div class="text_cont">
-                <div class="text">
-                    <h1>Sposób nauczania</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus >assumenda qui! Eum perspiciatis quis eligendi voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
-
-                </div>
-                <div class="python_img2">
-                    <img src="/static/pictures/python_learn.png" alt="Computer Image" id="py_2">
-                </div>
-            
-            </div>
-        </div>
-        <div class="first_cont">
-            <div class="text_cont" id="tC_2">
-                    <div class="python_img2">
-                        <img src="/static/pictures/pc.png" alt="Computer Image" id="py_2">
-                    </div>
-                    
-                <div class="text">
-                    <h1>Zadania</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus assumenda qui! Eum perspiciatis quis eligendi  voluptate. Lorem ipsum dolor sit amet consectetur  adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
-
-                </div>
-
-            </div>
-        </div>
-        <div class="first_cont">
-            <div class="text_cont">
-                <div class="text">
-                    <h1>Sposób nauczania</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, cumque impedit? Nisi odio, iste, quaerat saepe nulla soluta, neque minus animi esse possimus assumenda qui! Eum perspiciatis quis eligendi voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero iste neque, obcaecati corrupti fugiat nesciunt, totam pariatur id quam</p>
-
-                </div>
-                <div class="python_img2">
-                    <img src="/static/pictures/python_learn.png" alt="Computer Image" id="py_2">
-                </div>
-            
-            </div>
-        </div>
-
-        <div class="">
-
-        </div> 
-</div> -->
-
-
+    </script>
 
 
     <script>
 // alert("Strona jest stworzona jako projekt na lekcje Programowanai Stron Internetowych prosze mnie nie pozwyać thx")
+
+
+
 window.addEventListener("resize", function () {
         var width = window.innerWidth;
         var height = window.innerHeight;
