--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -2,13 +2,11 @@
     --color-black: #0f172a;
 }
 
-body{
-    background-color: white;
-    width: 100%;
-    height: 100%;
+
+.body{
+    margin: 0px;
     padding: 0px;
-    display: flex;
-    flex-direction: column;
+
 }
 
 .slider_div{
@@ -22,6 +20,7 @@ body{
     z-index: 3;
     display: flex;
     flex-direction: column;
+   
     gap: 3%;
 }   
 
@@ -41,6 +40,7 @@ body{
     justify-content: center;
     transition: all .15s linear;
     background-color: white;
+    
     color: black;
     cursor: pointer;
     font-size: 1em;
@@ -175,7 +175,7 @@ body{
     border: 0px;
 }
 
-header{
+.header{
     margin-top: 10px;
 }
 
